<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#343e56"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/welcome_to_tic_tac_toe"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-7947797926088216/2338934674"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWelcome">

    </com.google.android.gms.ads.AdView>

    <RelativeLayout
        android:id="@+id/relativeLayoutButton1"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:background="#343E56"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayoutButton4"
        app:layout_constraintEnd_toStartOf="@+id/relativeLayoutButton2"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageViewButton1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/button_image"
            tools:srcCompat="@tools:sample/avatars" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutButton2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="24dp"
        android:background="#343E56"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayoutButton6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageViewButton2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/button_image"
            tools:srcCompat="@tools:sample/avatars" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutButton3"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:background="#343E56"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayoutButton6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/relativeLayoutButton2">

        <ImageView
            android:id="@+id/imageViewButton3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/button_image"
            tools:srcCompat="@tools:sample/avatars" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutButton4"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginEnd="8dp"
        android:background="#343E56"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/relativeLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textViewWelcome">

        <ImageView
            android:id="@+id/imageViewButton4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/button_image"
            tools:srcCompat="@tools:sample/avatars" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutButton5"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#343E56"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWelcome">

        <ImageView
            android:id="@+id/imageViewButton5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/button_image"
            tools:srcCompat="@tools:sample/avatars" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutButton6"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:background="#343E56"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/relativeLayout4"
        app:layout_constraintTop_toBottomOf="@+id/textViewWelcome">

        <ImageView
            android:id="@+id/imageViewButton6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/button_image"
            tools:srcCompat="@tools:sample/avatars" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutButton7"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/relativeLayoutButton8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayoutButton4">

        <ImageView
            android:id="@+id/imageViewButton7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/button_image"
            tools:srcCompat="@tools:sample/avatars" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutButton8"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayoutButton5">

        <ImageView
            android:id="@+id/imageViewButton8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/button_image"
            tools:srcCompat="@tools:sample/avatars" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutButton9"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/relativeLayoutButton8"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayoutButton6">

        <ImageView
            android:id="@+id/imageViewButton9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/button_image"
            tools:srcCompat="@tools:sample/avatars" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="350dp"
        android:layout_height="8dp"
        android:layout_marginBottom="8dp"
        android:background="#F69E78"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayoutButton5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="350dp"
        android:layout_height="8dp"
        android:layout_marginTop="8dp"
        android:background="#F69E78"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayoutButton5">

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="8dp"
        android:layout_height="350dp"
        android:layout_marginEnd="8dp"
        android:background="#F69E78"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/relativeLayoutButton5"
        app:layout_constraintTop_toBottomOf="@+id/textViewWelcome">

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="8dp"
        android:layout_height="350dp"
        android:layout_marginStart="8dp"
        android:background="#F69E78"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/relativeLayoutButton5"
        app:layout_constraintTop_toBottomOf="@+id/textViewWelcome">

    </RelativeLayout>



    <Button
        android:id="@+id/buttonReset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/reset"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayoutButton8" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWelcome">

        <TextView
            android:id="@+id/textViewScoreX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/score_x_0"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewScoreO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/score_o_0"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-7947797926088216/2338934674"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonReset">

    </com.google.android.gms.ads.AdView>



</androidx.constraintlayout.widget.ConstraintLayout>